# django-docker-quickstart

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  env.example  manage.py  pyproject.toml
.github/workflows/: static-check.yml
deployment/: Dockerfile
deployment/scripts/backend/: start.sh
deployment/scripts/celery/: start-beat.sh  start-worker.sh
deployment/scripts/nginx/: nginx-media.conf  nginx-static.conf  nginx.conf
ops/common/alb/: locals.tf  main.tf  outputs.tf  variables.tf
ops/common/ecs/: iam.tf  locals.tf  main.tf  outputs.tf  variables.tf
ops/common/network/: local.tf  main.tf  outputs.tf  variables.tf  vpn.tf
ops/common/rds/: locals.tf  main.tf  outputs.tf  variables.tf
ops/common/redis/: locals.tf  main.tf  variables.tf
ops/common/services/: locals.tf  main.tf  variables.tf
ops/common/services/backend/: data.tf  main.tf  variables.tf
ops/common/services/beat/: main.tf  variables.tf
ops/common/services/worker/: main.tf  variables.tf
ops/dev/: main.tf  terraform.tf
ops/prod/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tf
ops/staging/: terraform.tf
quickstart/: asgi.py  celery.py  conftest.py  urls.py  wsgi.py
quickstart/settings/: base.py  prod.py
quickstart/status/: apps.py  urls.py  utils.py  views.py
quickstart/test_app/: admin.py  apps.py  models.py  tasks.py  views.py
quickstart/test_app/tests/: test_example.py
scripts/: entrypoint.sh  format.sh  lint.sh  test.sh
src/: manage.py  req.txt  requirements.dev.txt  requirements.txt
src/project_name/: asgi.py  celery.py  urls.py  wsgi.py
src/project_name/settings/: base.py  prod.py  test.py
src/test_app/: admin.py  apps.py  models.py  tasks.py  tests.py  urls.py  views.py
src/test_app/migrations/: 0001_initial.py
src/tests/: conftest.py
src/tests/test_app_1/: test_example.py
