[project]
name = "project"
version = "0.1.0"
authors = ["Your Name <your.email@test.com>"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "django>=5.0.1",
    "psycopg[c]>=3.1.17",
    "django-cors-headers>=4.3.1",
    "whitenoise>=6.6.0",
    "celery[redis]>=5.3.6",
    "gunicorn>=21.2.0",
]


[tool.pdm.options]
add = ["--no-isolation", "--no-self"]
install = ["--no-self"]
lock = ["--no-cross-platform"]
update = ["--no-self"]


# TESTING

[tool.pdm.dev-dependencies]
dev = [
    "pytest-django>=4.8.0",
    "pytest-sugar>=1.0.0",
    "coverage[toml]>=7.4.1",
    "ruff>=0.2.0",
    "black>=24.1.1",
    "pytest-asyncio>=0.23.3",
    "pytest<=7.4.4",
]
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --force-sugar --no-migrations --reuse-db --log-cli-level=INFO"
testpaths = [
    "src/tests",
    "tests",
]
pythonpath = [".", "src"]
python_files = "tests.py test_*.py *_tests.py"
DJANGO_SETTINGS_MODULE = "project_name.settings.test"
filterwarnings = [
    'ignore::DeprecationWarning:kombu.*:',
    'ignore::DeprecationWarning:celery.*:',
]
asyncio_mode = "auto"


[tool.coverage.report]
fail_under = 85
show_missing = "true"


[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/urls.py",
    "*/settings/*",
    "*/wsgi.py",
    "manage.py",
    "*__init__.py",
]
source = ["src"]


# LINTING
[tool.ruff]
output-format = "grouped"
src = ["src"]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
ignore = ["E501"]
ignore-init-module-imports = true

[tool.black]
line-length = 88
target-version = ['py311']
extend-exclude = '''
^(.*/)?migrations/.*$
'''